# Discrete_Time_Financial_Modelling

./: Makefile  README.md  assignment1.ipynb  assignment2.ipynb  assignment2.py  notebook.ipynb  pyproject.toml  test_2.py
src/: helpers.py  multi_steps.py  one_step.py  solver.py
src/models/: __init__.py  asset.py  base.py  base_derivative.py  derivative.py  indexable.py  interest.py  pi.py  state_price.py
tests/: test_examples.py
